Add facts to navigation bar

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -21,6 +21,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('main.facts') }}">Facts</a></li>
+            </ul>
         </div>
     </div>
 </nav>
