--- a/application/templates/facts.html
+++ b/application/templates/facts.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% from "macros.html" import render_pagination with context %}
 {% block app_content %}
 <div class="row">
     <div class="col">
@@ -27,6 +28,7 @@
                 {% endfor %}
             </tbody>
         </table>
+        {{ render_pagination(facts, 'main.facts') }}
     </div>
 </div>
 {% endblock %}
