--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.facts') }}">Facts</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.facts_datatable') }}">Facts (DataTable)</a>
+                    </li>
                 </ul>
             </div>
         </div>
